--- a/Training/XO.Entities/XO.Entities.csproj
+++ b/Training/XO.Entities/XO.Entities.csproj
@@ -4,13 +4,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{50F7D575-EC8B-4879-85FF-070B37DF3FD0}</ProjectGuid>
+    <ProjectGuid>{F78E1320-DA0A-4520-BB25-AFC114BB0007}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>XO.DB.SQL</RootNamespace>
-    <AssemblyName>XO.DB.SQL</AssemblyName>
+    <RootNamespace>XO.Entities</RootNamespace>
+    <AssemblyName>XO.Entities</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,7 +32,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,10 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Database.cs" />
-    <Compile Include="Producto.cs" />
+    <Compile Include="Actividad.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TipoProducto.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
