--- a/Training/XO.SOLID.LSP/XO.SOLID.LSP.csproj
+++ b/Training/XO.SOLID.LSP/XO.SOLID.LSP.csproj
@@ -41,11 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Customer.cs" />
-    <Compile Include="Enquiry.cs" />
-    <Compile Include="Gold.cs" />
+    <Compile Include="Sample01\Customer.cs" />
+    <Compile Include="Sample01\Enquiry.cs" />
+    <Compile Include="Sample01\Gold.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Silver.cs" />
+    <Compile Include="Sample01\Silver.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Sample02\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
