--- a/Training/XO.SOLID.OC/XO.SOLID.OC.csproj
+++ b/Training/XO.SOLID.OC/XO.SOLID.OC.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>XO.SOLID.OC</RootNamespace>
     <AssemblyName>XO.SOLID.OC</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -40,12 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NivelJunior.cs" />
+    <Compile Include="ManagerTrabajador.cs" />
+    <Compile Include="Niveles\NivelJunior.cs" />
     <Compile Include="Manager.cs" />
-    <Compile Include="NivelSalarial.cs" />
-    <Compile Include="NivelSemiSenior.cs" />
+    <Compile Include="Niveles\NivelSalarial.cs" />
+    <Compile Include="Niveles\NivelSemiSenior.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="NivelSenior.cs" />
+    <Compile Include="Niveles\NivelSenior.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
